<resources>
    <string name="app_name">Menu</string>
    <string name="action_bar_back">BACK</string>
    <string name="action_bar_tutorial">TUTORIAL</string>
    <string name="action_bar_checkout">VIEW ORDER</string>
    <string name="action_bar_add_items">ADD ITEMS</string>
    <string name="action_bar_order_summary">ORDER SUMMARY</string>
    <string name="action_bar_receipt">RECEIPT</string>
    <string name="action_bar_account_management">MANAGE</string>
    <string name="action_bar_about_the_app">ABOUT MENU</string>
    <string name="action_bar_sign_in">SIGN IN</string>
    <string name="action_bar_sign_up">SIGN UP</string>
    <string name="action_bar_pickup_info">ORDER PICK UP INFO</string>
    <string name="action_bar_main_menu">MAIN MENU</string>
    <string name="action_bar_order_again">ORDER AGAIN</string>
    <string name="splash_screen_welcome_message">Welcome to MENU</string>
    <string name="splash_screen_location_disabled_body_1">Location services</string>
    <string name="splash_screen_location_disabled_body_2">are disabled on your device. You need to enable them in order to use MENU.</string>
    <string name="splash_screen_location_disabled_desc_1">Go to</string>
    <string name="splash_screen_location_disabled_desc_2">Settings > Privacy > Location Services > Menu</string>
    <string name="splash_screen_location_disabled_desc_3">and allow Location Services \"Always\".</string>
    <string name="splash_screen_bluetooth_disabled_body_1">Bluetooth</string>
    <string name="splash_screen_bluetooth_disabled_body_2">is disabled on your device. You need to enable it in order to use Menu.</string>
    <string name="splash_screen_bluetooth_disabled_desc_1">Slide up from the bottom of the screen and enable bluetooth from the</string>
    <string name="splash_screen_bluetooth_disabled_desc_2">control center.</string>
    <string name="splash_screen_enable_location_services">ENABLE LOCATION SERVICES</string>
    <string name="menu_tutorial_screen_button_continue">CONTINUE</string>
    <string name="menu_tutorial_screen_button_make_your_choice">MAKE YOUR CHOICE</string>
    <string name="menu_tutorial_screen_button_awesome">AWESOME</string>
    <string name="tutorial_screen_first">Order from your table\nwith your phone:</string>
    <string name="tutorial_screen_second">Enjoy your meal!</string>
    <string name="restaurant_preview_activity_welcome_message">Welcome to</string>
    <string name="restaurant_preview_activity_make_your_order">MAKE YOUR ORDER</string>
    <string name="restaurant_preview_activity_powered_by">Provided to you by</string>
    <string name="txt_checkout_small">Checkout</string>
    <string name="dialog_add_comment">ADD COMMENT</string>
    <string name="dialog_loading">Loading&#8230;</string>
    <string name="dialog_please_wait">Please wait&#8230;</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_no_internet_connection_title">Try Again</string>
    <string name="dialog_no_internet_connection_message">No Internet Connection. Please make sure you have a 3G/4G or WLAN connection.</string>
    <string name="dialog_bluetooth_off">Bluetooth is off. Would you like to turn it on?</string>
    <string name="dialog_insert_email_address">You need to enter your email address</string>
    <string name="dialog_insert_password">You need to enter your password</string>
    <string name="dialog_insert_emal_address_and_password">Please, insert Your email address and password.</string>
    <string name="dialog_no_user">Please check your e-mail address or create an account if you don\'t have one yet.</string>
    <string name="dialog_no_user_title">Email address is invalid</string>
    <string name="dialog_wrong_password">Wrong password. Please try again</string>
    <string name="dialog_wrong_password_title">Wrong Password</string>
    <string name="dialog_order_successful">Your order was successful!</string>
    <string name="dialog_no_beacon_found">No iBeacon found. Search again?</string>
    <string name="dialog_no_restaurants_found">No restaurants found nearby. Search again?</string>
    <string name="dialog_fields_changed">Fields changed successfully.</string>
    <string name="dialog_email_in_use">This email address is already in use. Please try again</string>
    <string name="dialog_not_at_menu">You are not currently seated at a MENU powered table. You can still add items to your order, but you will need to be seated at a MENU powered table to place your order. Ask the service personnel to be seated at a MENU powered table.</string>
    <string name="dialog_cannot_order">You do not seem to be seated at a MENU powered table. If you are seated at a MENU powered table, please try again by moving your phone closer to the middle of the table and placing your order again.</string>
    <string name="dialog_card_declined">Your credit card was declined&#8230; Please try again</string>
    <string name="dialog_body_network_problem">Network problem, please try again.</string>
    <string name="dialog_body_default_error_message">Something went wrong&#8230; Please try again</string>
    <string name="dialog_body_default_error_title">Oops!</string>
    <string name="dialog_first_name_empty_content">Please enter your first name and try again</string>
    <string name="dialog_first_name_empty_title">Empty First Name</string>
    <string name="dialog_email_address_empty_content">Please enter your email address and try again</string>
    <string name="dialog_email_address_empty_title">Empty E-Mail Address</string>
    <string name="dialog_password_empty_content">Please enter a password and try again</string>
    <string name="dialog_password_empty_title">Empty Password</string>
    <string name="dialog_repeat_password_empty_content">Please repeat your password and try again</string>
    <string name="dialog_repeat_password_empty_title">Empty Repeat Password</string>
    <string name="dialog_credit_card_number_empty_content">Please enter your credit card number and try again</string>
    <string name="dialog_credit_card_number_empty_title">Empty Credit Card Number</string>
    <string name="dialog_cvv_empty_content">Please enter your credit card CVV and try again</string>
    <string name="dialog_cvv_empty_title">Empty CVV</string>
    <string name="dialog_passwords_dont_match_content">Passwords do not match. Please try again</string>
    <string name="dialog_passwords_dont_match_title">Passwords do not match</string>
    <string name="dialog_invalid_expiry_date_error_title">Invalid Expiry Date</string>
    <string name="dialog_invalid_expiry_date_error_content">Please enter a valid expiry date and try again</string>
    <string name="dialog_check_inbox_title">Check your Email!</string>
    <string name="dialog_check_inbox_content">Check your Email Inbox for a reset link</string>
    <string name="dialog_send_receipt_to_email_error">Something went wrong&#8230; You can try to resend your receipt from the main menu under View Past Receipts.</string>
    <string name="dialog_enter_your_comment">Enter Your comment here</string>
    <string name="dialog_please_login_again">Please login again</string>
    <string name="dialog_account_lockedout_title">Oops!</string>
    <string name="dialog_account_lockedout_content">For security reasons, logins to your account were blocked. Please try again in 5 minutes or reset your password if you forgot it.</string>
    <string name="checkout_thank_you_for_order">Thank you for your order!</string>
    <string name="checkout_receipt_sent"> A receipt has been sent to your email.</string>
    <string name="checkout_tip_col">TIP:</string>
    <string name="checkout_subtotal">SUBTOTAL</string>
    <string name="checkout_tax">VAT</string>
    <string name="checkout_tip">TIP</string>
    <string name="checkout_discount">DISCOUNT</string>
    <string name="checkout_total">TOTAL</string>
    <string name="checkout">PLACE ORDER</string>
    <string name="checkout_enjoy">ENJOY YOUR MEAL!</string>
    <string name="checkout_done">DONE</string>
    <string name="category_meals_add_large">ADD LARGE</string>
    <string name="category_meals_add_small">ADD SMALL</string>
    <string name="category_meals_add">ADD</string>
    <string name="category_meals_out_of_stock">SOLD OUT</string>
    <string name="category_meals_no_items_content">It appears that here is no item in this category. Please try ordering something from an other category</string>
    <string name="category_meals_no_items_title">No items</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_in_username_hint_text">Email address</string>
    <string name="sign_in_password_hint_text">Password</string>
    <string name="sign_in_sign_up_text">Don\'t have an account yet?</string>
    <string name="sign_in_forgot_password_text">Forgot password?</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_up_hide_button">HIDE</string>
    <string name="sign_in_nickname_hint_text">Nickname</string>
    <string name="sign_up_show_button">SHOW</string>
    <string name="sign_up_repeat_password_hint_text">Repeat password</string>
    <string name="sign_up_scan_credit_card_hint_text">SCAN CREDIT CARD</string>
    <string name="sign_up_credit_card_number_hint_text">Credit card number</string>
    <string name="sign_up_name_on_card_hint_text">Name on card</string>
    <string name="sign_up_date_hint_text">MM / YYYY</string>
    <string name="sign_up_cvv_hint_text">CVV</string>
    <string name="sign_up_show">SHOW</string>
    <string name="sign_up_hide">HIDE</string>
    <string name="sign_in_first_name_hint_text">First Name</string>
    <string name="sign_up_privacy_terms_intro">By signing up, you accept our</string>
    <string name="sign_up_privacy_terms_clickable">terms of service</string>
    <string name="sign_up_privacy_policy_and">and</string>
    <string name="sign_up_privacy_policy_clickable">privacy policy</string>
    <string name="sign_up_privacy_tokenizer">Your credit card is always safe with us -</string>
    <string name="sign_up_privacy_tokenizer_clickable">see how</string>
    <string name="manage_account_name_on_card_hint_text">Name on card</string>
    <string name="manage_account_new_password_hint_text">New Password</string>
    <string name="manage_account_email_hint_text">Email</string>
    <string name="manage_account_repeat_password_hint_text">Repeat password</string>
    <string name="manage_account_change_credit_card">CHANGE CREDIT CARD</string>
    <string name="manage_account_confirm_changes_text">CONFIRM CHANGES</string>
    <string name="manage_account_passwords_not_same">New password and repeated password are not same</string>
    <string name="meal_details_order_large">ORDER LARGE</string>
    <string name="meal_details_order_small">ORDER SMALL</string>
    <string name="meal_details_order">ORDER</string>
    <string name="receipt_send_to_email">SEND TO EMAIL</string>
    <string name="receipt_send_email_button_sent">SENT!</string>
    <string name="receipt_list_empty_body">Receipt list is empty.</string>
    <string name="receipt_list_message_sent_sucess">Receipt sent successfully to Your email.</string>
    <string name="misc_is_small">(S)</string>
    <string name="misc_splash">Welcome to MENU</string>
    <string name="misc_table">Table</string>
    <string name="misc_at">at</string>
    <string name="error_message_basic">Some error acquired. We weren\'t able to finish Your request. Please, try again later.</string>
    <string name="error_checkout_list_empty">Your cart is empty at the moment. Add some items.</string>
    <string name="about_menu_terms_of_service">Terms of Service</string>
    <string name="about_menu_aknoledgements">Acknowledgements</string>
    <string name="about_menu_privacy_terms">Privacy Policy</string>
</resources>