<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

<!--     <ImageView -->
<!--         android:id="@+id/iv1" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="45dp" -->
<!--         android:layout_marginTop="30dp" -->
<!--         android:src="@drawable/logo_menu_small" /> -->

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv1"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

         <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <EditText
            android:id="@+id/edittextSignUpActivityNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_edittext_shape"
            android:hint="@string/sign_in_nickname_hint_text"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_main_gray" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <EditText
            android:id="@+id/edittextSignUpActivityEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_edittext_shape"
            android:hint="@string/sign_in_username_hint_text"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_main_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edittextSignUpActivityPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/buttonSignUpActivityHide"
                android:layout_weight="1"
                android:background="@drawable/sign_in_edittext_shape"
                android:hint="@string/sign_in_password_hint_text"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/menu_main_gray" />

            <Button
                android:id="@+id/buttonSignUpActivityHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:alpha="0.6"
                android:background="@android:color/transparent"
                android:gravity="center|right"
                android:text="@string/sign_up_show_button"
                android:textColor="@color/menu_main_gray" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <EditText
            android:id="@+id/edittextSignUpActivityRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_edittext_shape"
            android:hint="@string/sign_up_repeat_password_hint_text"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_main_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <Button
            android:id="@+id/buttonSignUpScanCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_orange_button_shape"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/sign_up_scan_credit_card_hint_text"
            android:textColor="@color/menu_main_orange"
            android:textSize="10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <EditText
            android:id="@+id/edittextSignUpActivityCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_edittext_shape"
            android:hint="@string/sign_up_credit_card_number_hint_text"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_main_gray" 
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <EditText
            android:id="@+id/edittextSignUpActivityNameOnCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_edittext_shape"
            android:hint="@string/sign_up_name_on_card_hint_text"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_main_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/menu_main_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonSignUpActivityDateOfBirth"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="15dp"
                android:drawableRight="@drawable/icon_right"
                android:drawablePadding="10dp"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/sign_up_date_hint_text"
                android:inputType="datetime"
                android:singleLine="true"
                android:textColor="@color/menu_main_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/buttonSignUpActivityDateOfBirth"
                android:layout_toLeftOf="@+id/edittextSignUpActivityCCV"
                android:layout_below="@+id/buttonSignUpActivityDateOfBirth"
                android:alpha="0.5"
                android:layout_marginRight="15dp"
                android:background="@color/menu_main_gray" />

            <EditText
                android:id="@+id/edittextSignUpActivityCCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/sign_in_edittext_shape"
                android:gravity="right"
                android:hint="@string/sign_up_ccv_hint_text"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:maxLength="3"
                android:layout_centerVertical="true"
                android:textColor="@color/menu_main_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/edittextSignUpActivityCCV"
                android:layout_alignRight="@+id/edittextSignUpActivityCCV"
                android:layout_below="@+id/buttonSignUpActivityDateOfBirth"
                android:alpha="0.5"
                android:background="@color/menu_main_gray" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUpActivitySignUp"
        style="@style/Menu_Button_Orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up_button_text" />

</RelativeLayout>