<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical" 
        android:background="@android:color/white">

        <com.s7design.menu.views.MenuButton
            android:id="@+id/buttonAboutMenuActivityTermsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_right"
            android:text="@string/about_menu_terms_of_service"
            android:textColor="@color/menu_main_orange"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearlayoutAboutMenuActivityTermsOfUseContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/webviewAboutMenuActivityTermsOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.s7design.menu.views.MenuButton
            android:id="@+id/buttonAboutMenuActivityAknowledgements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_right"
            android:text="@string/about_menu_aknoledgements"
            android:textColor="@color/menu_main_orange"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearlayoutAboutMenuActivityAknowledgementsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/webviewAboutMenuActivityAknowledgements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.s7design.menu.views.MenuButton
            android:id="@+id/buttonAboutMenuActivityPrivacyTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_right"
            android:text="@string/about_menu_privacy_terms"
            android:textColor="@color/menu_main_orange"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearlayoutAboutMenuActivityPrivacyTermsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/webviewAboutMenuActivityPrivacyTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>